syntax = "proto3";

package io.odpf.dagger.consumer;

option java_multiple_files = true;
option java_package = "io.odpf.dagger.consumer";
option java_outer_classname = "TestMessageProto";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message TestKey {
    string order_number = 1;
    string order_url = 2;
}

message TestMessage {
    string order_number = 1;
    string order_url = 2;
    string order_details = 3;
}

message TestNestedMessage {
    string nested_id = 1;
    TestMessage single_message = 2;
}

message TestNestedRepeatedMessage {
    TestMessage single_message = 1;
    repeated TestMessage repeated_message = 2;
    int32 number_field = 3;
    repeated int32 repeated_number_field = 4;
    repeated google.protobuf.Struct metadata = 5;
    google.protobuf.Timestamp event_timestamp = 6;
    repeated int64 repeated_long_field = 7;
}

message TestMapMessage {
    string order_number = 1;
    map<string, string> current_state = 2;
}

message TestRepeatedEnumMessage {
    repeated TestEnumMessage.Enum test_enums = 1;
}

message TestEnumMessage {
    enum Enum {
        UNKNOWN = 0;
        FIRST_ENUM_VALUE = 1;
        SECOND_ENUM_VALUE = 2;
    }
}

message TestComplexMap {
    message IdMessage {
        repeated string ids = 1;
    }
    map<int32, TestMessage> complex_map = 1;
    map<int64, IdMessage> int_message = 2;
    map<string, IdMessage> string_message = 3;
}

message TestRepeatedPrimitiveMessage {
    repeated bytes metadata_bytes = 1;
}
